--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "hsm",
+  "name": "smc",
   "version": "1.0.0",
   "scripts": {
     "build": "lerna run build --parallel",
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@sanity/cli": "^2.4.0",
-    "lerna": "^3.9.0"
+    "@sanity/cli": "^2.6.0",
+    "lerna": "^3.22.1"
   }
 }
