--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "hsm-studio",
+  "name": "smc-studio",
   "version": "1.0.0",
   "main": "package.json",
   "author": "Markus Haack <markus.haack@gmail.com>",
@@ -10,15 +10,16 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.4.3",
-    "@sanity/cli": "^2.4.0",
+    "@sanity/base": "^2.6.0",
+    "@sanity/cli": "^2.6.0",
     "@sanity/components": "^2.2.6",
-    "@sanity/core": "^2.4.0",
+    "@sanity/core": "^2.6.1",
     "@sanity/dashboard": "^2.2.6",
-    "@sanity/default-layout": "^2.4.3",
+    "@sanity/default-layout": "^2.6.0",
     "@sanity/default-login": "^2.2.6",
-    "@sanity/desk-tool": "^2.4.3",
+    "@sanity/desk-tool": "^2.6.1",
     "@sanity/studio-hints": "^2.4.3",
+    "@sanity/vision": "^2.2.6",
     "bcp47": "^1.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
