--- a/web/package.json
+++ b/web/package.json
@@ -1,43 +1,29 @@
 {
   "private": true,
-  "name": "hsm-web",
+  "name": "smc-web",
   "version": "1.0.0",
   "author": "Markus Haack <markus.haack@gmail.com>",
   "scripts": {
     "dev": "next",
-    "build": "next build && next export && node exportSitemap.js",
+    "build": "next build && next export",
     "format": "prettier-eslint --write \"**/*.js\" \"!.next/**\" \"!node_modules/**\" \"!out/**\"",
     "lint": "eslint .",
     "start": "next start"
   },
   "dependencies": {
-    "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/client": "^2.1.0",
+    "@sanity/block-content-to-react": "2.0.7",
     "@sanity/image-url": "^0.140.19",
-    "@zeit/next-css": "^1.0.1",
-    "groq": "^0.140.0",
-    "lodash": "^4.17.11",
-    "next": "^8.1.0",
-    "next-seo": "^1.11.2",
+    "@sanity/client": "^2.1.0",
+    "classnames": "2.2.6",
+    "date-fns": "2.10.0",
+    "next-sanity": "0.1.5",
+    "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-inlinesvg": "^0.8.4",
-    "react-mailchimp-form": "^1.0.1",
-    "react-mailchimp-subscribe": "^2.1.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "cssnano": "^4.1.10",
-    "eslint": "^5.15.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-standard": "^4.1.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.6.0",
-    "sitemap": "^2.1.0"
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.2.0"
   }
 }
