--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,16 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "eslint": "^7.21.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-standard": "^5.0.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier-eslint-cli": "^5.0.1",
     "tailwindcss": "^1.2.0"
   }
 }
